--- a/love_heart2.html
+++ b/love_heart2.html
@@ -12,7 +12,8 @@ html, body {
   /* 修改下面的值可以改变背景颜色 */
   /* background: #000000; */
 
-    background: url(https://i.imgtg.com/2022/11/17/t4T7b.jpg) no-repeat center center;
+    background: url(https://i.imgtg.com/2022/12/07/DFc1C.jpg) no-repeat center center;
+    /* background: url(https://i.imgtg.com/2022/11/17/t4T7b.jpg) no-repeat center center; */
     background-size: cover;
     height: 100vh;
 
