--- a/love_heart3.html
+++ b/love_heart3.html
@@ -101,7 +101,7 @@
   </head>
   <body>
     <canvas id="pinkboard"></canvas>
-    <!-- <div id="name">白汶艳 ❤️</div> -->
+    <!-- <div id="name">离岸 ❤️</div> -->
     <canvas id="canvas"></canvas>
 
     <script type="text/javascript">
