--- a/love_heart3.html
+++ b/love_heart3.html
@@ -177,7 +177,7 @@
         // ctx.font="20px";
         ctx.fillStyle = colors[i % 18];
         ctx.fillText(
-          "白汶艳",
+          "离岸小姐姐",
           this.x - this.width * 0.5,
           this.y - this.height * 0.5,
           this.width,
