--- a/love_heart2.html
+++ b/love_heart2.html
@@ -13,7 +13,9 @@ html, body {
   /* background: #000000; */
 
 /*     background: url(https://i.imgtg.com/2022/12/07/DFc1C.jpg) no-repeat center center; */
-    background: url(https://i.imgtg.com/2022/12/20/HRwNN.jpg) no-repeat center center;
+/*     background: url(https://i.imgtg.com/2022/12/20/HRwNN.jpg) no-repeat center center; */
+    background: url(https://i.imgtg.com/2022/12/20/HtOuL.jpg) no-repeat center center;
+/*  https://i.imgtg.com/2022/12/20/HtOuL.jpg  */
     /*  https://i.imgtg.com/2022/12/20/HRwNN.jpg  */
     /* background: url(https://i.imgtg.com/2022/11/17/t4T7b.jpg) no-repeat center center; */
     background-size: cover;
