--- a/love_heart2.html
+++ b/love_heart2.html
@@ -49,7 +49,7 @@ canvas {
    var words_attr = [];
    var words = []
 
-   var name = 'have fun'; // 洋子：修改周边漂浮的文字 名字
+   var name = 'Love everyday'; // 洋子：修改周边漂浮的文字 名字
    var name2 = '离岸'; // 洋子：在中心的名字
    var count = '50';     // 洋子：修改漂浮文字数量
    var nameHeartFont = "60px "; // 洋子：修改数值则修改中心名字的大小
