--- a/love_heart2.html
+++ b/love_heart2.html
@@ -51,7 +51,7 @@ canvas {
    var words = []
 
    var name = 'Love everyday'; // 洋子：修改周边漂浮的文字 名字
-   var name2 = '丰仪'; // 洋子：在中心的名字
+   var name2 = '丰仪小可爱'; // 洋子：在中心的名字
    var count = '50';     // 洋子：修改漂浮文字数量
    var nameHeartFont = "60px "; // 洋子：修改数值则修改中心名字的大小
    var myfont = " Times New Roman "; //洋子：改成你电脑上有的字体
